# Verbum-

./: .env.example  Dockerfile  README.md  arquitectura.py  pyproject.toml
app/: main.py
app/api/v1/: health.py  info.py
app/core/: config.py
app/models/: common.py
tests/: conftest.py
tests/infra/: test_health.py  test_info.py
