[project]
name = "verbum-core"
version = "0.1.0"
description = "Verbum Core - infraestructura y contratos"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.95,<1.0",
  "uvicorn[standard]>=0.22,<1.0",
  "pydantic>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
  "pytest-asyncio>=0.21",
  "black",
  "ruff"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
